--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
+    "@astrojs/markdown-remark": "^6.3.1",
     "@astrojs/rss": "^4.0.10",
     "@astrojs/tailwind": "^5.1.3",
     "@astrojs/vercel": "^8.0.0",
@@ -30,12 +31,14 @@
     "@waline/client": "^3.4.1",
     "astro": "^5.0.5",
     "astro-pure": "1.2.3",
+    "hastscript": "^9.0.1",
     "katex": "^0.16.15",
     "rehype-katex": "^7.0.1",
     "remark-math": "^6.0.0",
     "sharp": "^0.33.5",
     "tailwindcss": "^3.4.16",
-    "typescript": "^5.7.2"
+    "typescript": "^5.7.2",
+    "unist-util-visit": "^5.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.16.0",
@@ -47,5 +50,11 @@
     "prettier-plugin-tailwindcss": "^0.6.9",
     "rollup-plugin-visualizer": "^5.12.0",
     "typescript-eslint": "^8.18.2"
+  },
+  "pnpm": {
+    "ignoredBuiltDependencies": [
+      "esbuild",
+      "sharp"
+    ]
   }
 }
