--- a/package.json
+++ b/package.json
@@ -23,22 +23,33 @@
   "dependencies": {
     "@astrojs/check": "^0.9.4",
     "@astrojs/markdown-remark": "^6.3.1",
+    "@astrojs/mdx": "^4.2.2",
     "@astrojs/rss": "^4.0.10",
-    "@astrojs/tailwind": "^5.1.3",
+    "@astrojs/sitemap": "^3.3.0",
+    "@astrojs/tailwind": "^5.1.5",
     "@astrojs/vercel": "^8.0.0",
+    "@pagefind/default-ui": "^1.3.0",
     "@playform/compress": "^0.1.6",
     "@tailwindcss/typography": "^0.5.15",
     "@waline/client": "^3.4.1",
-    "astro": "^5.0.5",
-    "astro-pure": "1.2.3",
+    "astro": "^5.5.5",
+    "astro-pure": "link:packages/pure",
+    "hast-util-select": "^6.0.4",
     "hastscript": "^9.0.1",
     "katex": "^0.16.15",
+    "node-html-parser": "^7.0.1",
+    "pagefind": "^1.3.0",
+    "rehype": "^13.0.2",
+    "rehype-external-links": "^3.0.0",
     "rehype-katex": "^7.0.1",
     "remark-math": "^6.0.0",
     "sharp": "^0.33.5",
+    "tailwind-merge": "^3.0.2",
     "tailwindcss": "^3.4.16",
     "typescript": "^5.7.2",
-    "unist-util-visit": "^5.0.0"
+    "ultrahtml": "^1.5.3",
+    "unist-util-visit": "^5.0.0",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.16.0",
